<resources>
    <string name="app_name">LogicGames</string>
    <string name="start">To the games list</string>
    <string name="top">Leaderboard</string>
    <string name="exit">Exit</string>
    <string name="gameslist">Games List</string>
    <string name="difficultySelect">Select a difficulty!</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="startTheGame">Start the Game!</string>
    <string name="findpairname">Find Pair</string>
    <string name="fpeasydesc">Pair the colors</string>
    <string name="fpmediumdesc">Pair the items</string>
    <string name="fpharddesc">Pair the field of use</string>
    <string name="seqname">Sequencer</string>
    <string name="clicks">"Clicks: "</string>
    <string name="restart">Restart</string>
    <string name="pause">Pause</string>
    <string name="seqdesc">Make a chain</string>
    <string name="mathquizname">Math Quiz</string>
    <string name="mqeasydesc">Addition and subtraction</string>
    <string name="mqmediumdesc">Multiplication and division</string>
    <string name="mqharddesc">Addition, subtraction, multiplication and division</string>
    <string name="mqtimer" translatable="false">60</string>
    <string name="mqmath" translatable="false">2+2 =</string>
    <string name="mqanswerfield">Enter an answer</string>
    <string name="mqgameover">Game over! Your result is:</string>
    <string name="restartquestion">Restart the game?</string>
    <string name="sqround">Round: </string>
    <string name="clickcount">"Clicks count: "</string>
    <string name="congrats">Congratulations!</string>
    <string name="paused">Game paused</string>
    <!-- Strings used for fragments for navigation -->
</resources>