<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFAB40"
    tools:context=".GamesList">

    <!-- CardView for Find Pair game-->
    <androidx.cardview.widget.CardView
        android:id="@+id/fpcardview"
        style="@style/Base.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.021">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFF8D"
            app:layout_constraintBottom_toBottomOf="@+id/base_cardview"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.511"
            tools:layout_editor_absoluteX="-55dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/fpfixed_layout"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <ImageView
                    android:id="@+id/fpicon"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/fpicon"
                    app:layout_constraintBottom_toBottomOf="@+id/fpfixed_layout"
                    app:layout_constraintEnd_toEndOf="@+id/fpfixed_layout"
                    app:layout_constraintHorizontal_bias="0.1"
                    app:layout_constraintStart_toStartOf="@+id/fpfixed_layout"
                    app:layout_constraintTop_toTopOf="@+id/fpfixed_layout"
                    app:layout_constraintVertical_bias="0.5"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/findpairname"
                    android:textColor="#006600"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/fpfixed_layout"
                    app:layout_constraintEnd_toEndOf="@+id/fpfixed_layout"
                    app:layout_constraintHorizontal_bias="0.926"
                    app:layout_constraintStart_toStartOf="@+id/fpfixed_layout"
                    app:layout_constraintTop_toTopOf="@+id/fpfixed_layout"
                    app:layout_constraintVertical_bias="0.198" />

                <ImageButton
                    android:id="@+id/fparrow_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_expand_more_24"
                    app:layout_constraintBottom_toBottomOf="@id/fpfixed_layout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <!-- Difficulty buttons -->
            <LinearLayout
                android:id="@+id/fphidden_view1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fpfixed_layout"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/difficultySelect"
                        android:textColor="#000000"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/fpeasybutton"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/easy"
                        android:textAlignment="center"
                        android:textColor="#880E4F" />

                    <Button
                        android:id="@+id/fpmediumbutton"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/medium"
                        android:textAlignment="center"
                        android:textColor="#880E4F" />

                    <Button
                        android:id="@+id/fphardbutton"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/hard"
                        android:textAlignment="center"
                        android:textColor="#880E4F" />
                </LinearLayout>

                <!-- Shows the description of difficulty and start button on click -->
                <LinearLayout
                    android:id="@+id/fphidden_view2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fixed_layout"
                    tools:visibility="visible">

                    <TextView
                        android:id="@+id/fpdescription"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/startFindPair"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/startTheGame" />
                </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <!-- CardView for the Ultrasequencer game -->

</androidx.constraintlayout.widget.ConstraintLayout>