<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFAB40"
    tools:context=".Sequencer">

    <TextView
        android:id="@+id/sqround"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/sqround"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:stretchColumns="0,1,2,3,4"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sqround">

        <TableRow
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="20dp"
                android:layout_height="60dp"
                android:layout_margin="4dp"
                android:background="@color/white"/>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="20dp"
                android:layout_height="60dp"
                android:layout_margin="4dp"
                android:background="@color/white" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="20dp"
                android:layout_height="60dp"
                android:layout_margin="4dp"
                android:background="@color/white" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="20dp"
                android:layout_height="60dp"
                android:layout_margin="4dp"
                android:background="@color/white" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="20dp"
                android:layout_height="60dp"
                android:layout_margin="4dp"
                android:background="@color/white" />
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="20dp"
                android:layout_height="60dp"
                android:layout_margin="4dp"
                android:background="@color/white" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="20dp"
                android:layout_height="60dp"
                android:layout_margin="4dp"
                android:background="@color/white" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="20dp"
                android:layout_height="60dp"
                android:layout_margin="4dp"
                android:background="@color/white" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="20dp"
                android:layout_height="60dp"
                android:layout_margin="4dp"
                android:background="@color/white" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="20dp"
                android:layout_height="60dp"
                android:layout_margin="4dp"
                android:background="@color/white" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="20dp"
                android:layout_height="60dp"
                android:layout_margin="4dp"
                android:background="@color/white" />

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="20dp"
                android:layout_height="60dp"
                android:layout_margin="4dp"
                android:background="@color/white" />

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="20dp"
                android:layout_height="60dp"
                android:layout_margin="4dp"
                android:background="@color/white" />

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="20dp"
                android:layout_height="60dp"
                android:layout_margin="4dp"
                android:background="@color/white" />

            <ImageView
                android:id="@+id/imageView15"
                android:layout_width="20dp"
                android:layout_height="60dp"
                android:layout_margin="4dp"
                android:background="@color/white" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView16"
                android:layout_width="20dp"
                android:layout_height="60dp"
                android:layout_margin="4dp"
                android:background="@color/white" />

            <ImageView
                android:id="@+id/imageView17"
                android:layout_width="20dp"
                android:layout_height="60dp"
                android:layout_margin="4dp"
                android:background="@color/white" />

            <ImageView
                android:id="@+id/imageView18"
                android:layout_width="20dp"
                android:layout_height="60dp"
                android:layout_margin="4dp"
                android:background="@color/white" />

            <ImageView
                android:id="@+id/imageView19"
                android:layout_width="20dp"
                android:layout_height="60dp"
                android:layout_margin="4dp"
                android:background="@color/white" />

            <ImageView
                android:id="@+id/imageView20"
                android:layout_width="20dp"
                android:layout_height="60dp"
                android:layout_margin="4dp"
                android:background="@color/white" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout">

        <Button
            android:id="@+id/restartButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:background="#F57F17"
            android:text="@string/restart"
            android:textSize="16sp" />

        <Button
            android:id="@+id/pauseButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:background="#F57F17"
            android:text="@string/pause"
            android:textSize="16sp" />

        <Button
            android:id="@+id/exitButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:background="#F57F17"
            android:text="@string/exit"
            android:textSize="16sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>